--- a/comment.html
+++ b/comment.html
@@ -2,7 +2,8 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -10,6 +11,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
+
+    <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&display=swap" rel="stylesheet">
+
+    <title>Title</title>
 
     <style>
         .wrap {
@@ -95,14 +100,14 @@
     </style>
 
     <script>
-         $(document).ready(function () {
-            get_comment()
-         });
+        $(document).ready(function () {
+            show_order();
+        });
 
-        function get_comment() {
-                $.ajax({
+        function show_order() {
+             $.ajax({
                     type: "GET",
-                    url: "/comment",
+                    url: "/comment/content",
                     data: {},
                     success: function (response) {
                         let rows = response['comments']
@@ -115,6 +120,7 @@
                                               <th scope="row">${num}</th>
                                               <td>${nickname}</td>
                                               <td>${comment}</td>
+                                              <td><button onclick="delete_comment()">삭제</button></td>
                                             </tr>`
 
                             $('#comment_body').append(html_temp)
@@ -129,7 +135,7 @@
 
             $.ajax({
                 type: "POST",
-                url: "/comment",
+                url: "/comment/content",
                 data: {nickname_give : nickname, comment_give: comment},
                 success: function (response) {
                     console.log(response['msg'])
@@ -137,6 +143,32 @@
                 }
             })
         }
+
+        function delete_comment() {
+             $.ajax({
+                    type: "GET",
+                    url: "/comment/content2",
+                    data: {},
+                    success: function (response) {
+                        let rows = response['comments']
+                        for (let i = 0; i < rows.length; i++) {
+                            let num = rows[i]['num']
+                            let nickname = rows[i]['nickname']
+                            let comment = rows[i]['comment']
+
+                            let html_temp = `<tr>
+                                              <th scope="row">${num}</th>
+                                              <td>${nickname}</td>
+                                              <td>${comment}</td>
+                                              <td><button onclick="delete_comment()">삭제</button></td>
+                                            </tr>`
+
+                            $('#comment_body').append(html_temp)
+                        }
+                    }
+                });
+            }
+
     </script>
 </head>
 <body>
@@ -162,17 +194,21 @@
             </div>
             <div class="content-right">
                 <div class="comment">
-                    <table class="table">
+                    <div class="content-table">
+                        <table class="table">
                         <thead>
                         <tr>
                             <th scope="col">#</th>
                             <th scope="col">닉네임</th>
                             <th scope="col">댓글내용</th>
+                            <th scope="col">댓글삭제</th>
                         </tr>
                         </thead>
                         <tbody id="comment_body">
                         </tbody>
                     </table>
+                    </div>
+
                 </div>
                 <div class="comment-box">
                     <div class="mb-3">
